Release native DSH Android 0.1.9